--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -2,6 +2,7 @@ body
   font-family: sans-serif
   font-size: 75%
 ul
+  list-style-type: none
   padding: 0
   margin: 0
 th
@@ -12,6 +13,8 @@ a
   text-decoration: none
 a:hover
   text-decoration: underline
+td.not_match a
+  color: #999
 section
   margin-bottom: 0.5em
   margin-top: 0.5em
@@ -25,8 +28,9 @@ table
   thead
     th.underline, tr:last-child th
       border-bottom: solid 1px #666
-  tr.overline td
-    border-top: solid 1px #666
+  tr.overline
+    td, th
+      border-top: solid 1px #ccc
 table.no-border
   border: none
 
