Much better starting page, now featuring JS for matching effects

--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -36,3 +36,17 @@ table.no-border
 
 footer
   text-align: center
+
+.center
+  text-align: center
+
+.matched, .matched + td
+  background-color: lightblue
+.highlight, .highlight + td
+  background-color: #f9a9d7
+  a
+    color: #7f2b14
+.highlight.matched, .highlight.matched + td
+  background-color: #d4a2ef
+  a
+    color: #6b28ce
