--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -50,3 +50,12 @@ footer
   background-color: #d4a2ef
   a
     color: #6b28ce
+
+#nirnroot
+  background-image: url(/assets/nirnroot.jpg)
+  position: fixed
+  height: 128px
+  right: 16px
+  top: 8px
+  width: 128px
+  z-index: -1
