Better alignment of values

--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -39,6 +39,8 @@ footer
 
 .center
   text-align: center
+.right
+  text-align: right
 
 .matched, .matched + td
   background-color: lightblue
@@ -59,3 +61,6 @@ footer
   top: 8px
   width: 128px
   z-index: -1
+
+.sigfigs
+  color: #666
