--- a/app/views/potions/show.html.haml
+++ b/app/views/potions/show.html.haml
@@ -3,15 +3,15 @@
   %thead
     %tr
       %th Name
-      %th Weight
-      %th Cost
+      %th.right Cost
+      %th.right Weight
       %th{:colspan => 4} Effects
   %tbody
     - @potion.ingredients.each do |i|
       %tr
         %td= link_to i.name, i
-        %td= i.weight
-        %td= i.cost
+        %td.right= i.cost
+        %td.right= pad_weight i.weight
         - i.effects.each do |e|
           %td= link_to e.name, e
 %h2 Effects
@@ -19,16 +19,16 @@
   %thead
     %tr
       %th Name
-      %th Value
+      %th.right Value
       %th Description
   %tbody
     - @potion.effects.sort_by(&:value).reverse.each do |e|
       %tr
         %td= link_to e.name, e
-        %td= e.value
+        %td.right= e.value
         %td= e.description
   %tfoot
     %tr.overline
       %td &nbsp;
-      %td= @potion.value
+      %td.right= @potion.value
       %td &nbsp;
