--- a/app/views/potions/index.html.haml
+++ b/app/views/potions/index.html.haml
@@ -4,7 +4,7 @@
       %th Name
       %th{:colspan => 3}Ingredients
       %th{:colspan => 5}Effects
-      %th Value
+      %th.right Value
   %tbody
     - @potions.each do |potion|
       %tr
@@ -17,5 +17,5 @@
           %td= link_to effect.name, effect
         - if potion.effects.count < 5
           %td{:colspan => 5 - potion.effects.count}
-        %td= potion.value
+        %td.right= potion.value
 = will_paginate @potions
