--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,9 @@
 !!! 5
 %html
   %head
+    %meta{:charset => "utf-8"}
     %title= title
+    = render partial: "layouts/description"
     = stylesheet_link_tag    "application"
     = javascript_include_tag "application"
     = csrf_meta_tags
