Much better initial screen for mixing

--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -37,6 +37,10 @@ table.no-border
 footer
   text-align: center
 
+.float-left
+  float: left
+.clear
+  clear: both
 .center
   text-align: center
 .right
@@ -52,6 +56,10 @@ footer
   background-color: #d4a2ef
   a
     color: #6b28ce
+.matched.doubled, .matched.doubled + td
+  background-color: lightgreen
+  a
+    color: green
 
 #nirnroot
   background-image: url(/assets/nirnroot.jpg)
