Fixed show potion link for 2 ingredients

--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -45,6 +45,8 @@ footer
   text-align: center
 .right
   text-align: right
+.hidden
+  display: none
 
 .matched, .matched + td
   background-color: lightblue
